Fix for social icons overlapping blog year border line

--- a/assets/css/hyde.css
+++ b/assets/css/hyde.css
@@ -69,7 +69,7 @@ html {
   background-color: #202020;
   font-family: "Oswald", sans-serif;
   max-height: 4rem;
-  transition: max-height 1s;
+  transition: max-height 0.5s;
 }
 .sidebar.menu-open {
   max-height: 10rem;
@@ -145,6 +145,11 @@ a.sidebar-nav-item:focus {
   .sidebar-nav-social-container-followme {
     display: none;
   }
+}
+
+.menu-closed {
+  position: relative;
+  z-index: -1;
 }
 
 /* sidebar github-forkme */
